<resources>
    <string name="app_name">Alias Pro</string>
    <string name="headerRules1">Что нужно делать?</string>
    <string name="textRules1">1. Поделиться на команды</string>
    <string name="textRules2">2. Объяснить как можно больше слов своей команде за установленное время</string>
    <string name="headerRules2">Ограничения</string>
    <string name="textRules3">1. Нельзя использовать однокоренные слова для объяснения. Например слово шахматы нельзя объяснить как игра в которой ставится шах и мат, так как используются однокоренные слова</string>
    <string name="textRules4">2. Нельзя переводить слово на иностранный язык</string>
    <string name="headerRules3">Победа</string>
    <string name="textRules5">1. Команда которая отгадала большее количество слов или набрала необходимое количество очков за установленное время, считается победителем.</string>
    <string name="textRules6">2. Проигравшая команда выполняет желание победителей.</string>
    <string name="btnLike">Поставить Like</string>
    <string name="btnNewGame">Новая игра</string>
    <string name="btnContinue">Продолжить</string>
    <string name="btnHowToPlay">Как играть?</string>
    <string name="seekbarTitleWord">Количество слов для победы</string>
    <string name="seekbarTitleTime">Продолжительность раунда</string>
    <string name="commandstring">Команды</string>
    <string name="titleTask">Задания</string>
    <string name="subtitleTask">Доп. шуточные задания при объяснении слов</string>
    <string name="titlePenalty">Штраф</string>
    <string name="subtitlePenalty">При пропуске слова вычитается 1 балл</string>
    <string name="dictionaryString">Словарь</string>
    <string name="dictionaryStringDef">Выберите словарь</string>
    <string name="subtitleLastWord">После окончания времени, последнее слово может угадывать любая команда</string>
    <string name="titleLastWord">Последнее слово для всех</string>
    <string name="sec">сек.</string>
    <string name="setTeam">Выберите команду</string>
    <string name="btnAdd">Добавить</string>
    <string name="btnBack">Назад</string>
    <string name="btnNext">Дальше</string>
    <string name="btnNextStep">Продолжить</string>
    <string name="btnStart">Начинаем!</string>
    <string name="strRound">Раунд</string>
    <string name="strPlayTeam">играет команда: </string>
    <string name="strTeam">Команда</string>
    <string name="strScoreAll">Очки за игру</string>
    <string name="strScore">Очки за раунд</string>
    <string name="getDictionaryStr">Для начала игры выберите словарь!</string>
    <string name="strIsskipped">ПРОПУЩЕНО</string>
    <string name="strIsguessed">ОТГАДАНО</string>
    <string name="strTimeLabel">Время:</string>
    <string name="strCustDialogLastWordWinTeam">Последнее слово отгадала команда:</string>
    <string name="strCustomDialogTaskDescrHeader">Дополнительное задание:</string>
    <string name="strRoundPointsName">Количество очков</string>
    <string name="strCongratulation">ПОЗДРАВЛЯЕМ!</string>
    <string name="strWinnerIsTeam">Победила команда</string>
    <string name="setDictionary">Выберите словарь</string>
    <string name="strTaskScoreName">Выполнение доп. задачи:</string>
    <string name="strTaskCompletedAsk">Условия дополнительного задания были выполнены?</string>
    <string name="btnTaskIsnCompletedText">Нет</string>
    <string name="btnTaskCompletedText">Да</string>
    <string name="strLastWord">Последнее слово</string>

    <string name="banner_ad_unit_id">ca-app-pub-5351987413735598/8339138455</string>
    <string name="admob_pub_id">ca-app-pub-5351987413735598~4651174887</string>


    <string name="label_rules_activity">Правила игры</string>
    <string name="label_settings_activity">Настройки игры</string>
    <string name="label_dictionaries_activity">Словари</string>
    <string name="label_rating_activity">Рейтинг команд</string>
    <string name="label_roundresult_activity">Результат раунда</string>
    <string name="label_congratulate_activity">Поздравление победителя</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
