<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/congrat"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    >
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/strCongratulation"
    style="@style/StyleTextBoxCongrat"
    />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/strWinnerIsTeam"
    style="@style/StyleTextBoxCongrat"
    />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/StyleTextBoxCongrat"
    android:text="Жулики"
    android:id="@+id/tvWinerTeamName"
    />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strRoundPointsName"
            style="@style/StyleTextBoxCongrat"
            android:layout_marginRight="2dp"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="9999"
            style="@style/StyleTextBoxCongrat"
            android:id="@+id/tvWinerScore"
            />
    </LinearLayout>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
    <Button
        android:id="@+id/btnEndGame"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="btnEndGame_Click"
        android:text="@string/btnContinue"
        style="@style/StyleButtonGo"
        />
    </LinearLayout>

</RelativeLayout>
