<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/labelaliaspro"
            />
<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@drawable/button_rounded_corner"
    android:textColor="@color/colorWhite"
    android:onClick="btnNewGame_Click"
    android:text="@string/btnNewGame"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded_corner"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorWhite"
        android:onClick="btnContinue_Click"
        android:text="@string/btnContinue"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded_corner"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorWhite"
        android:onClick="btnHowToPlay_Click"
        android:text="@string/btnHowToPlay"/>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/btnLike"
            android:textColor="@color/colorPrimary"
            android:onClick="btnLike_Click"/>
        <fragment
            android:name="com.devprogram.aliaspro.AdMobFragment"
            android:id="@+id/admobFragmentMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>