<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <LinearLayout
        android:id="@+id/lltopdialogsetteam"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setTeam"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvSetTeamList"
       android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:listSelector="@color/colorPrimaryCustom1"
        >

    </ListView>

    <LinearLayout
        android:id="@+id/llbottomdialogsetteam"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        >

        <Button
            android:id="@+id/btnBackTeam"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded_corner_pink"
            android:text="@string/btnBack"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btnAddTeam"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded_corner"
            android:text="@string/btnAdd"
            android:textColor="@color/colorWhite" />
    </LinearLayout>


</RelativeLayout>