<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addDictionaryToGame_Click"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/dictionaryString"
                    android:textColor="@color/colorPrimaryCustom1"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal"
                    >
                    <LinearLayout
                        android:id="@+id/llDicFree"
                        android:layout_width="34dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="0"
                        android:visibility="gone"
                        >
                        <ImageView
                            android:layout_width="34dp"
                            android:layout_height="34dp"
                            android:gravity="center"
                            android:id="@+id/imgDictFree"
                            />
                        <TextView
                            android:id="@+id/tvDictionaryCountWords"
                            android:layout_width="match_parent"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:textColor="@color/colorYellow"
                            android:textSize="13sp"
                            android:textStyle="bold"
                            />
                    </LinearLayout>



                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        >

                        <TextView
                            android:id="@+id/tvDictionaryName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="-4dp"
                            android:text="@string/dictionaryStringDef"
                            android:textColor="@color/colorBlack"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tvDictionaryDescription"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="2"
                            android:ellipsize="end"
                            android:textSize="12sp" />
                    </LinearLayout>
                    <Button
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="0"
                        android:background="@drawable/rightarrow64"
                        android:onClick="addDictionaryToGame_Click" />

                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/commandstring"
                android:textColor="@color/colorPrimaryCustom1"
                android:textSize="16sp" />
            <LinearLayout
                android:id="@+id/llContainerComandItemsFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/line" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-21dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/round_button_add"
                    android:onClick="btnAddComand_click"
                    android:text="+"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:layout_marginTop="-15dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/seekbarTitleWord"
                        android:textColor="@color/colorPrimaryCustom1"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvWordSet"
                        android:layout_width="match_parent"
                        android:layout_height="31dp"
                        android:gravity="right"
                        android:text="100"
                        android:textColor="@color/colorYellow"
                        android:textSize="28sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_margin="4dp"
                        android:background="@drawable/button_rounded_corner_pink"
                        android:text="-10 слов"
                        android:textColor="@color/colorWhite"
                        android:textSize="12sp"
                        android:onClick="minusWords_onClick"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_margin="4dp"
                        android:background="@drawable/button_rounded_corner_pink"
                        android:text="+10 слов"
                        android:textColor="@color/colorWhite"
                        android:textSize="12sp"
                        android:onClick="plusWords_onClick"/>
                </LinearLayout>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/line" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/seekbarTitleTime"
                    android:textColor="@color/colorPrimaryCustom1"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvTimeSet"
                    android:layout_width="wrap_content"
                    android:layout_height="31dp"
                    android:layout_margin="0dp"
                    android:layout_weight="3"
                    android:gravity="right"
                    android:text="60"
                    android:textColor="@color/colorYellow"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="0"
                    android:gravity="right"
                    android:text="@string/sec"
                    android:textColor="@color/colorYellow"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/button_rounded_corner_pink"
                    android:text="-10 сек."
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"
                    android:onClick="minusSeconds_onClick"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/button_rounded_corner_pink"
                    android:text="+10 сек."
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"
                    android:onClick="plusSeconds_onClick"
                    />
            </LinearLayout>

        </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/line" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:orientation="vertical">
            <Switch
                android:id="@+id/swDopTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/titleTask"
                android:textColor="@color/colorPrimaryCustom1"
                android:textSize="16sp"
                android:theme="@style/SCBSwitch" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/subtitleTask"
                android:textSize="12sp"
                />
        </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/line" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:orientation="vertical">
            <Switch
                android:id="@+id/swBan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/titlePenalty"
                android:textColor="@color/colorPrimaryCustom1"
                android:textSize="16sp"
                android:theme="@style/SCBSwitch" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/subtitlePenalty"
                android:textSize="12sp" />
        </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/line" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:orientation="vertical">
                <Switch
                    android:id="@+id/swLastWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/titleLastWord"
                    android:textColor="@color/colorPrimaryCustom1"
                    android:textSize="16sp"
                    android:theme="@style/SCBSwitch" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/subtitleLastWord"
                    android:textSize="12sp" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/line" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/StyleButtonGo"
        android:text="@string/btnNextStep"
        android:id="@+id/btnToWords"
        android:onClick="btnNextToChooseWords_Click"
        />

 </LinearLayout>

</LinearLayout>